@@ -1,3 +1,6 @@
+2007-10-22  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/ReportBase/_MenuOptions.py: Refactored options, GEPS #005
+
 2007-10-21  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/Calendar.py: select first/last marriage for maiden name
 
